fixed the gap between project images and description

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -3,6 +3,8 @@
     max-width: 30rem;
     display: flex;
     flex-direction: column;
+    align-content: flex-start;
+
     
 }
 
@@ -11,7 +13,6 @@
     width: 30rem;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
-    margin-bottom: -.2rem;
 }
 
 .card-content{
